# tesseract

./: .editorconfig  .gitignore  Cargo.toml  README.md  co.uk.cappsy.Tesseract.json  justfile  uk.co.cappsy.Tesseract.json
.devcontainer/: Containerfile  Dockerfile  devcontainer.json
i18n/cs/: tesseract.ftl
i18n/en/: tesseract.ftl
i18n/eo/: tesseract.ftl
i18n/pt/: tesseract.ftl
i18n/sv/: tesseract.ftl
resources/: app.desktop  app.metainfo.xml
resources/screenshots/: merge.sh
src/: app.rs  i18n.rs  main.rs  record.rs  scramble.rs  scrambler.rs  timer.rs
