[package]
name = "tesseract"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0"
description = "A speed cubing timer for the COSMIC™ desktop."
repository = "https://github.com/cappsyco/tesseract"
authors = ["Jonathan Capps", "Jonathan Capps <cappsy@gmail.com>"]

[build-dependencies]
vergen = { version = "8", features = ["git", "gitcl"] }

[dependencies]
futures-util = "0.3.31"
i18n-embed-fl = "0.9.2"
open = "5.3.0"
rand = "0.9.1"
rust-embed = "8.5.0"
strum = { version = "0.21", features = ["derive"] }
tokio = { version = "1.41.0", features = ["full"] }
tracing = { version = "0.1.37", features = ["log"] }

[dependencies.i18n-embed]
version = "0.15"
features = ["fluent-system", "desktop-requester"]

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
# See https://github.com/pop-os/libcosmic/blob/master/Cargo.toml for available features.
features = [
    "a11y",
    "about",
    "dbus-config",
    "multi-window",
    "single-instance",
    "tokio",
    "winit",
    "wayland",
    "wgpu",
]

# Uncomment to test a locally-cloned libcosmic
# [patch.'https://github.com/pop-os/libcosmic']
# libcosmic = { path = "../libcosmic" }
# cosmic-config = { path = "../libcosmic/cosmic-config" }
# cosmic-theme = { path = "../libcosmic/cosmic-theme" }
