[package]
name = "tesseract"
version = "0.3.2"
edition = "2024"
license = "GPL-3.0"
description = "A speed cubing timer for the COSMIC™ desktop."
repository = "https://github.com/cappsyco/tesseract"
authors = ["Jonathan Capps", "Jonathan Capps <cappsy@gmail.com>"]

[dependencies]
futures-util = "0.3.32"
i18n-embed-fl = "0.10.0"
open = "5.3.3"
rand = "0.10.0"
regex = "1.12.3"
rust-embed = "8.11.0"
strum = { version = "0.28.0", features = ["derive"] }
tokio = { version = "1.50.0", features = ["full"] }
hrsw = "0.1.2"
tracing = { version = "0.1.44", features = ["log"] }
cube_scrambler = "0.2.1"
serde = "1.0.228"

[dependencies.i18n-embed]
version = "0.16.0"
features = ["fluent-system", "desktop-requester"]

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
# See https://github.com/pop-os/libcosmic/blob/master/Cargo.toml for available features.
features = [
    "a11y",
    "about",
    "dbus-config",
    "multi-window",
    "single-instance",
    "tokio",
    "winit",
    "wayland",
    "wgpu",
]

# Uncomment to test a locally-cloned libcosmic
# [patch.'https://github.com/pop-os/libcosmic']
# libcosmic = { path = "../libcosmic" }
# cosmic-config = { path = "../libcosmic/cosmic-config" }
# cosmic-theme = { path = "../libcosmic/cosmic-theme" }
